--- a/QuizForge.html
+++ b/QuizForge.html
@@ -16,6 +16,7 @@
     --bad:#dc2626;   /* red-600 */
     --btn1:#7c3aed;  /* violet-600 */
     --btn2:#06b6d4;  /* cyan-500 */
+    --choice-text:#1e40af; /* blue-800 */
   }
   @media (prefers-color-scheme: dark){
     :root{
