Validate inputs and improve error handling

--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
 
         <div class="actions">
           <button type="button" id="calcBtn" class="btn">Calculate Premium/Death Benefit</button>
+          <div class="error" id="inputErr" aria-live="polite"></div>
         </div>
       </form>
     </aside>
